k8s_files/autoseguro/dev/autoseguro-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoseguro-ingress
  namespace: test-namesapce
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/affinity: cookie
    # nginx.ingress.kubernetes.io/affinity-mode: balanced
    # nginx.ingress.kubernetes.io/session-cookie-name: "somename"
    # nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
  - hosts:
      - dev.autoseguro365.com
    secretName: autoseguro365-com-letsencrypt-tls
  rules:
    - host: dev.autoseguro365.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: autoseguro-service
              port:
                number: 80
    # - host: demo.autoseguro365.com
    #   http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: hello-one
    #           port:
    #             number: 80
